# aoc22

./: README.md  pyproject.toml
02/: second.py
03/: third.py
04/: four.py
05/: five.py
08/: aight.py
1/: first.py
10/: teeen.py
11/: eleven.py
12/: dozen.py
14/: fourteen.py
6/: six.py
7/: seven.py
9/: nein.py
