[tool.poetry]
name = "advent_of_code_22"
version = "0.1.0"
description = ""
authors = ["Petr Kobrle <pkobrle@paysure.solutions>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.5"
matplotlib = "^3.6.2"
imageio = "^2.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
